--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -7,7 +7,8 @@
 
 <h1>Hi There!</h1>
 <p>There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab.
-When {{ person_name }} went to pick it up, it burst into flames in a totally
+When {{ person_name }} went to pick it up with their {{ animals }}
+	 , it burst into flames in a totally
 {{ adjective }} way.</p>
 
 </form>
