--- a/templates/game.html
+++ b/templates/game.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     Hi {{ person }}!
-    <form action="/madlib">
+    <form action="/madlib" method="POST">
     	Enter a name:
     	<input type="text" name="person_name"><br>
     	Select a color:
